--- a/mainLayout.css
+++ b/mainLayout.css
@@ -11,27 +11,26 @@
 }
 
 #content{
-/*	background-color:gray;*/
 }
 
 
-#arrowcanvas{
-  z-index: 2;
+#arrowcanvas {
+  position: absolute;
 }
 
+#checkerboard {
+  position: absolute;
+}
 
 #checkerboard span{
     display: inline-block;
-    z-index: 1;
-    width: 32px;
-    height: 32px;
 }
 
-#chessBoard div:nth-child(odd) span:nth-child(even),
-#chessBoard div:nth-child(even) span:nth-child(odd){
+#checkerboard div:nth-child(odd) span:nth-child(even),
+#checkerboard div:nth-child(even) span:nth-child(odd){
     background-color: black;
 }
-#chessBoard div:nth-child(even) span:nth-child(even),
-#chessBoard div:nth-child(odd) span:nth-child(odd){
+#checkerboard div:nth-child(even) span:nth-child(even),
+#checkerboard div:nth-child(odd) span:nth-child(odd){
     background-color: white;
 }
