--- a/mainLayout.css
+++ b/mainLayout.css
@@ -21,6 +21,12 @@
 
 #checkerboard {
   position: absolute;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #checkerboard span{
